Fix the bug that absolute positioned element moves unexpectedly

For an absolute positioned element, if its containing block is the body
it's not supposed to move as scroll. However, on low dpi devices, it
doesn't get composited if its ancestor is isolated composited therefore
it moves unexpectedly.

BUG=719533
TEST=third_party/WebKit/LayoutTests/compositing/overflow/absolute-element-in-isolated-composited-ancestor.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2869813002
Cr-Commit-Position: refs/heads/master@{#471158}

Former-commit-id: fca776d5b4979b1f9d86926bfb6d3fb14a0343f3